--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-scrollspy": "^3.4.3",
+    "sweetalert2": "^11.4.19",
+    "sweetalert2-react-content": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
