--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.3.1",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scrollspy": "^3.4.3",
     "sweetalert2": "^11.4.19",
