--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL='https://backend-portfolio-production-171a.up.railway.app'
+REACT_APP_API_URL='https://back-portfolio-gustavo.herokuapp.com'
