--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scrollspy": "^3.4.3",
     "sweetalert2": "^11.4.19",
