--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Deploy en VPS
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-            cd /home/devgustavo/public_html/ || git clone git@github.com:gafc2001/gafc2001.github.io.git && cd portfolio
+            cd /home/devgustavo/public_html/ || git clone git@github.com:gafc2001/gafc2001.github.io.git .
 
             git pull origin main
 
