--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Deploy en VPS
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-            cd /home/devgustavo/public_html/ || git clone git@github.com:gafc2001/gafc2001.github.io.git .
+            cd /home/devgustavo/public_html/
+            git clone git@github.com:gafc2001/gafc2001.github.io.git . || true
 
             git pull origin main
 
@@ -29,5 +30,5 @@ jobs:
             docker rm portfolio || true
 
             docker build -t portfolio:latest .
-            docker run -d -p 8080:80 --name portfolio portfolio:latest
+            docker run -d -p 3000:80 --name portfolio portfolio:latest
           EOF
