--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             cd /home/devgustavo/public_html/
+
+            pwd
+            
             git clone git@github.com:gafc2001/gafc2001.github.io.git . || true
 
             git pull origin main
