--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,13 @@ jobs:
             cd /home/devgustavo/public_html/
 
             pwd
-            
+
+            echo "Cloning or pulling changes"
             git clone git@github.com:gafc2001/gafc2001.github.io.git . || true
 
             git pull origin main
 
+            echo "Creating image"
             docker stop portfolio || true
             docker rm portfolio || true
 
